    box which is [pos,dim) in nature, [inclusive, exclusive).
  * Changed from "new wxDCClip()" to use an automatic wxDCClip() variable in
    drawpanel.cpp
  * Removed a printf() from "release" build of drawpanel.cpp
  * Added WinEDA_DrawPanel::PostDirtyRect()
  * Renamed Supprime_Une_Piste() to Remove_One_Track() and it now uses
    PostDirtyRect().


2008-Mar-10 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew
    Pcbnew can import footprints in gpcb format in Nelib format only
    Pcbnew automatically recognizes pcbnew or gpcb format when importing a footprint.
        Due to differences between pcbnew and gpcb,
        only gpcb newlib files containing only one footprint (one element) are useables.
    Dirty rectangle calculation debugged.
    WinEDA_DrawPanel::ConvertPcbUnitsToPixelsUnits( EDA_Rect& aRect ) can be used to convert a bouding box to a clip box
    (see example in deltrack.cpp)
+eeschema:
    restored: missing lines in schedit.cpp (problems in a lot of commands)


2008-Mar-06 UPDATE Igor Plyatov <plyatov@mail.ru>
================================================================================
+help
    Eliminated bug "help files not found!".


2008-Mar-5 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew
    Solved problem in fill zone calculations when using buried or blind vias (like micro vias)


2008-Feb-18 UPDATE Igor Plyatov <plyatov@mail.ru>
================================================================================
+common
    Path for the help files changed to doc/help.
+help
    help moved to the doc/help.
+doc
    Separated from KiCad source code to the trunk/kicad-doc.
+library
+modules
    Separated from KiCad source code to the trunk/kicad-library.


2008-Mar-3 UPDATE   Dick Hollenbeck <dick@softplc.com>